examples/postgres.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: example-postgres
  labels:
    app: postgres
    example: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      example: postgres
  template:
    metadata:
      labels:
        app: postgres
        example: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.4
        volumeMounts:
          - name: db-init-vol
            mountPath: /docker-entrypoint-initdb.d
        ports:
        - containerPort: 5432
      volumes:
        - name: db-init-vol
          configMap:
            name: example-postgres
            items:
              - key: init-jira-db.sh
                path: init-jira-db.sh
---
apiVersion: v1
kind: Service
metadata:
  name: example-postgres
  labels:
    app: postgres
    example: postgres
spec:
  selector:
    app: postgres
    example: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
