examples/tectonic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-tectonic-ingress
  annotations:
    kubernetes.io/ingress.class: tectonic
spec:
  rules:
    - host: jira.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: example-jira
              servicePort: 8080
